[metadata]
name = heat-contrib-barbican
summary = Heat resources for Barbican
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heat_barbican

# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/barbican = heat_barbican/resources/*

[entry_points]
heat.clients =
    barbican = heat_barbican.client:BarbicanClientPlugin

[global]
setup-hooks =
    pbr.hooks.setup_hook
