[metadata]
name = heat-contrib-docker
summary = Heat resource for Docker containers
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/heat/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/docker = heat_docker/resources/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
