[metadata]
name = heat-contrib-gnocchi
version = 0.1
summary = Heat resources for working gnocchi queues
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heat_gnocchi
# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/gnocchi = heat_gnocchi/resources/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
