[metadata]
name = heat-contrib-keystone
summary = Heat resources for Keystone
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heat_keystone

# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/keystone = heat_keystone/resources/*

[entry_points]
heat.clients =
    keystone=heat_keystone.client:KeystoneClientPlugin

heat.constraints =
    keystone.role=heat_keystone.client:KeystoneRoleConstraint
    keystone.domain=heat_keystone.client:KeystoneDomainConstraint
    keystone.project=heat_keystone.client:KeystoneProjectConstraint
    keystone.group=heat_keystone.client:KeystoneGroupConstraint
    keystone.service=heat_keystone.client:KeystoneServiceConstraint

[global]
setup-hooks =
    pbr.hooks.setup_hook

