[metadata]
name = heat-contrib-keystone-v2
summary = Keystone V2 compatible client
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/heat_keystoneclient_v2 = heat_keystoneclient_v2/*

[global]
setup-hooks =
    pbr.hooks.setup_hook
