[metadata]
name = heat-contrib-manila
summary = Heat resources for Manila
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    heat_manila

# Copy to /usr/lib/heat for plugin loading
data_files =
    lib/heat/manila = heat_manila/resources/*

[entry_points]
heat.clients =
    manila = heat_manila.client:ManilaClientPlugin

[global]
setup-hooks =
    pbr.hooks.setup_hook
